--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "thor-bizpage-update",
-  "version": "0.4.2",
+  "version": "1.0.0",
   "description": "Adding Thor's configurable biz pages feature to existing project or updating it",
   "bin": "src/index.js",
   "scripts": {
@@ -9,6 +9,7 @@
   "author": "youngbeen",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.20.0",
     "chalk": "^4.1.0",
     "fs-extra": "^9.0.1"
   },
