--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "thor-bizpage-update",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Adding Thor's configurable biz pages feature to existing project or updating it",
-  "bin": "src/index.js",
+  "bin": {
+    "thor-bizpage-update": "src/index.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,6 +13,7 @@
   "dependencies": {
     "axios": "^0.20.0",
     "chalk": "^4.1.0",
+    "enquirer": "^2.3.6",
     "fs-extra": "^9.0.1"
   },
   "repository": {
