--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "thor-bizpage-update",
-  "version": "1.1.1",
-  "description": "Adding Thor's configurable biz pages feature to existing project or updating it",
+  "name": "thor-updater",
+  "version": "0.1.0",
+  "description": "Add, update Thor's configurable biz service and framework",
   "bin": {
-    "thor-bizpage-update": "src/index.js"
+    "thor-update": "src/index.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,11 +13,12 @@
   "dependencies": {
     "axios": "^0.20.0",
     "chalk": "^4.1.0",
+    "diff": "^5.0.0",
     "enquirer": "^2.3.6",
     "fs-extra": "^9.0.1"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/youngbeen/thor-bizpage-update"
+    "url": "https://github.com/youngbeen/thor-updater"
   }
 }
